# ai-collab-experiment

./: ALIGNMENT_RULES.md  ANSWER.md  OBJECTIVE_FUNCTION.md  README.md  SCORECARD.md
01-business-requirements/: BR_TEMPLATE.md  br-001-003.md  br-004-006.md  br-007-009.md  br-010-011.md  br-012-013.md  br-014-015.md  br-016-018.md  br-019-021.md  br-022-024.md  br-025-026.md  business-requirements.md  glossary.md  stakeholder-needs.md  use-cases.md
02-functional-requirements/: acceptance-criteria.md  data-flows.md  functional-requirements.md
03-technical-requirements/: compliance-requirements.md  infrastructure-requirements.md  integration-requirements.md  non-functional-requirements.md
04-technical-design/: api-design.md  architecture.md  data-model-design.md  deployment-design.md  security-design.md  (+1 more)
08-software/: .gitignore  pyproject.toml  requirements.txt
08-software/api-gateway/: __init__.py  app.py  routers.py
08-software/event-bus/: __init__.py  base_bus.py  kafka_bus.py
08-software/infrastructure/k8s/: deployment.yaml
08-software/infrastructure/terraform/: main.tf
08-software/services/adapters/: __init__.py  base_adapter.py  edc_adapter.py  lims_adapter.py  safety_adapter.py
08-software/services/core/: __init__.py  safety_service.py  study_service.py  subject_service.py
08-software/services/transforms/: __init__.py  base_transform.py  edc_to_sdtm.py
08-software/shared/models/: __init__.py  adverse_event.py  lab_result.py  query.py  study.py  subject.py
08-software/shared/utils/: __init__.py  config.py  errors.py  logging.py
(+86 files in other folders)
